# computer-graphics-mipt

./: README.md
ogl-master/: CMakeLists.txt
ogl-master/2triangle/: 2triangle.cpp  SimpleVertexShader.vertexshader
ogl-master/camera/: SimpleVertexShader.vertexshader  blue.fragmentshader  camera.cpp  red.fragmentshader
ogl-master/plambob/: plambob.cpp
